# streamlit-penguin-classification

./: LICENSE  README.md  app.py  penguins-model-building.py  penguins_clf.pkl  pyproject.toml  requirements.txt  setup.sh  setup.sh.txt
