[tool.poetry]
name = "repl_nix_streamlit-penguin-classification"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "3.8"
numpy = "^1.23.3"
pandas = "^1.4.4"
streamlit = "^1.12.2"
scikit-learn = "1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
